@@ -5,7 +5,7 @@ use inc::Module::Install;
 
 # Definition.
 abstract 'Process environment variable $BROWSER and run web browser.';
-author 'Michal Spacek <skim@cpan.org>';
+author 'Michal Josef Spacek <skim@cpan.org>';
 author_requires 'English' => 0;
 author_requires 'File::Object' => 0.06;
 author_requires 'Test::Pod' => 0;
