@@ -1,5 +1,6 @@
 0.06
  - Update Module::Install to 1.19 version.
+ - Update author name.
 
 0.05 2015-09-22T11:18:27+02:00
  - Add 'readme_from' directive to Makefile.PL.
